--- a/PS6-CHEME-5660-Student-SyntheticDataGen-Fall-2025.ipynb
+++ b/PS6-CHEME-5660-Student-SyntheticDataGen-Fall-2025.ipynb
@@ -1728,12 +1728,12 @@
     "* __Can you think of scenarios or asset classes where the SIM might perform poorly?__ (Hint: Consider idiosyncratic events, sector-specific shocks, or company-specific news.)\n",
     "* __How might the choice of market index (SPY, DIA, Russell 2000, etc.) affect the quality of your synthetic data generation?__\n",
     "\n",
-    "Put your discussion answers here."
+    "SIM can be used to create synthetic data when asset returns are controlled by systematic market movements instead of pellicular factor. It will work well for large stocks within stable sectors. In this, we see that the shocks are minimal. The market factor explain most return variation. This model also works well when working with broad index funds whose performance tracks the overall market. SIM doesn't work well when dealing with company-specific events like a random boost or dealing with regulations Assets are also affected by other factors such as currencies. Selecting the right market index is important. SPY representes large-cap U.S. equities and does not work well with small-cap stocks or international assets. Other benchmarks more accurately reflect the relevant risk factor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "62c3e3fa",
    "metadata": {},
    "outputs": [],
@@ -1758,7 +1758,7 @@
     "* __What risk management policies could you implement to protect against model failures?__ (Consider: Should you reduce position sizes? Halt trading? Require additional validation before acting?)\n",
     "* __Could you use a combination of models to improve robustness?__ (For example, what additional factors beyond market returns might improve predictions for individual stocks?)\n",
     "\n",
-    "Put your discussion answers here."
+    "Model validation needs continuous statistical monitoring to detect when predictions diverge from actual outcomes. By using rolling hypothesis tests and residual analysis, one can identify systematic failures and error-bound tracking. They revel when actual returns consistently fall outside simulated confidence intervals. Risk management policies could include adaptive position sizing that reduces exposure during high-error periods. Circuit breakers can also be used to stop trading when residuals exceed volatility thresholds. Finally, one could reort to regular stress testing under extreme scenarios. Overall, robustness can be improved by augmenting SIM with multi-factor models. Making changes to size or momentum effects or by incorporating regime-switching frameworks. Together, they form a layered system that acknowledges SIM's limitations while taking precautions against model failure."
    ]
   },
   {
@@ -1778,6 +1778,12 @@
    "source": [
     "___"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43afc341",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
